syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message TokenTransferCountByTokenContract {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1;
  uint64 log_index = 2;
  string token_contract = 3 [(gorm.field).tag = {primary_key: true}];
  uint64 count = 4;
  uint64 block_number = 5;
}
